--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     padding: 30px;
-    background-image: linear-gradient(black,#fffef7);
+    background-image: linear-gradient(white,#fffef7);
 }
 
 .container {
